<resources>
    <string name="app_name">Movies</string>

    <string name="dialog_title_device_is_offline">No internet connection</string>
    <string name="dialog_message_device_is_offline">You can not use app without internet connection. Please, check
        internet connection.
    </string>
    <string name="dialog_title_stub">Undefined error</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_tittle_sorry">Sorry</string>
    <string name="empty_server_response_on_success">Couldn\'t find any definitions</string>
    <string name="error_stub">Error</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_movie">Add Movie</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="tagline">Tagline</string>
    <string name="cast">Cast</string>
    <string name="rating">Rating</string>
    <string name="save_movie">Save Movie</string>
    <string name="movie_url">Movie URL</string>
    <string name="image_url">Image URL</string>
</resources>